# st-launcher

./: CONTRIBUTING.md  README.md  stlauncher.pro
qml/: CMakeLists.txt  STLauncherV2.qmlproject  STLauncherV2.qmlproject.qtds  qmlmodules
qml/content/: App.qml  AppList.qml  AppMainMenu.qml  CommandInput.qml  CustomBusyIndicator.qml  Information.qml  LoadingScreen.qml  Setting.qml  SplashScreen.qml  StmInfo.qml
qml/imports/: CMakeLists.txt
qml/imports/STLauncherV2/: CMakeLists.txt  Constants.qml  qmldir
qml/imports/STLauncherV2/designer/: plugin.metainfo
qml/src/: app_environment.h  import_qml_plugins.h
src/: Application.cpp  Application.h  ApplicationFilter.cpp  ApplicationFilter.h  ApplicationFinder.cpp  ApplicationFinder.h  ApplicationList.cpp  ApplicationList.h  ApplicationStorageFormat.cpp  ApplicationStorageFormat.h  IconeProvider.cpp  IconeProvider.h  PlatformData.cpp  PlatformData.h  main.cpp
